paint/support/test/tests/decl_storage_ui/get_duplicate.stderr
error: `config()`/`get()` with the same name already defined.
  --> $DIR/get_duplicate.rs:29:21
   |
29 |         pub Value2 get(fn value) config(): u32;
   |                           ^^^^^
